# xlnscpp

./: .gitignore  CMakeLists.txt  README.md  explanatino.md  ggml.md  xlns16.cpp  xlns16exptbl.h  xlns16logtbl.h
.github/agents/: GSoC.agent.md
.github/workflows/: ci.yml
cmake/: xlnsConfig.cmake.in
docs/: api-reference.md  architecture.md  building.md  file-map.md  intro.md  testing.md
examples/: CMakeLists.txt  basic_usage.cpp
include/xlns/: xlns.h  xlns16.h  xlns32.h
legacy/: db16.cpp  dblptest.py  dbmit16.cpp  dbtest.py  sb16.cpp  sblptest.py  sbmit16.cpp  sbtest.py  time16test.cpp  xlns16.cpp  xlns16funtest.cpp  xlns16test.cpp  xlns32.cpp  xlns32funtest.cpp  xlns32test.cpp
project/: docs.md  project-plan-v1.md  project-plan.md
src/: xlns16.cpp  xlns32.cpp
test/: CMakeLists.txt
test/benchmark/: bench_xlns16.cpp
test/cross-validation/: db16.cpp  dblptest.py  dbmit16.cpp  dbtest.py  sb16.cpp  sblptest.py  sbmit16.cpp  sbtest.py
test/unit/: test_xlns16.cpp  test_xlns32.cpp  test_xlns_both.cpp  xlns16_funtest.cpp  xlns32_funtest.cpp
